--- a/crates/defs/Cargo.toml
+++ b/crates/defs/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "syntax"
+name = "defs"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+db_utils = { path = "../db_utils" }
 salsa = "0.16.1"
 smol_str = "0.1.23"
+syntax = { path = "../syntax" }
