--- a/crates/defs/Cargo.toml
+++ b/crates/defs/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 
 [dependencies]
 db_utils = { path = "../db_utils" }
+filesystem = { path = "../filesystem" }
 salsa = "0.16.1"
 smol_str = "0.1.23"
-syntax = { path = "../syntax" }
