Orizi/sierra text parsing (#14)
* added textual parsing for sierra - and moved display tests to be based on reformating of parsed code.

--- a/crates/sierra/Cargo.toml
+++ b/crates/sierra/Cargo.toml
@@ -2,6 +2,13 @@
 name = "sierra"
 version = "0.1.0"
 edition = "2021"
+build = "src/build.rs" # LALRPOP preprocessing
+
+[build-dependencies]
+lalrpop = "*"
+regex = "1"
 
 [dependencies]
+indoc = "*"
+lalrpop-util = { version = "*", features = ["lexer"] }
 thiserror = "*"
