Added basic extensions specialization lib - only checking tmpl args. (#35)
* Added extensions specialization - and a single example extension.

--- a/crates/sierra/Cargo.toml
+++ b/crates/sierra/Cargo.toml
@@ -8,7 +8,11 @@ build = "src/build.rs" # LALRPOP preprocessing
 lalrpop = "*"
 regex = "1"
 
+[dev-dependencies]
+test-case = "*"
+
 [dependencies]
 indoc = "*"
+itertools = "*"
 lalrpop-util = { version = "*", features = ["lexer"] }
 thiserror = "*"
