Add compiler_test.rs (#50)
* Add compiler_test.rs

--- a/crates/sierra/Cargo.toml
+++ b/crates/sierra/Cargo.toml
@@ -9,9 +9,11 @@ lalrpop = "*"
 regex = "1"
 
 [dev-dependencies]
+assert_matches = "1.5"
 test-case = "*"
 
 [dependencies]
+casm = { path = "../casm" }
 indoc = "*"
 itertools = "*"
 lalrpop-util = { version = "*", features = ["lexer"] }
