Added simulation function to extensions. (#46)
* Added simulation function to extensions.

commit-id:9bd517dd

--- a/crates/sierra/Cargo.toml
+++ b/crates/sierra/Cargo.toml
@@ -15,6 +15,7 @@ test-case = "*"
 
 [dependencies]
 casm = { path = "../casm" }
+array-init = "*"
 itertools = "*"
 lalrpop-util = { version = "*", features = ["lexer"] }
 thiserror = "*"
