Add initial version of generate_expression_code(). (#77)
* Add initial version of generate_expression_code().

* Fix PR comments.

--- a/crates/sierra_generator/Cargo.toml
+++ b/crates/sierra_generator/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 defs = {path = "../defs"}
 salsa = "0.16.1"
 semantic = { path = "../semantic" }
+
+[dev_dependencies]
+pretty_assertions = "1.2.1"
