--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+db_utils = { path = "../db_utils" }
+filesystem = { path = "../filesystem" }
 salsa = "0.16.1"
 smol_str = "0.1.23"
 syntax = { path = "../syntax" }
-filesystem = { path = "../filesystem" }
