--- a/crates/diagnostics/Cargo.toml
+++ b/crates/diagnostics/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 [dependencies]
 filesystem = { path = "../filesystem" }
 salsa = "0.16.1"
+
+[dev_dependencies]
+assert_matches = "1.5"
+diagnostics_proc_macros = { path = "../diagnostics_proc_macros" }
