--- a/crates/sierra_generator/Cargo.toml
+++ b/crates/sierra_generator/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 defs = {path = "../defs"}
 salsa = "0.16.1"
 semantic = { path = "../semantic" }
+sierra = { path = "../sierra" }
 
 [dev_dependencies]
 pretty_assertions = "1.2.1"
