--- a/crates/sierra_to_casm/Cargo.toml
+++ b/crates/sierra_to_casm/Cargo.toml
@@ -5,10 +5,10 @@ edition = "2021"
 
 [dev-dependencies]
 assert_matches = "1.5"
-indoc = "*"
-test-case = "*"
+indoc = "1.0.7"
+test-case = "2.2.1"
 
 [dependencies]
 casm = { path = "../casm" }
 sierra = { path = "../sierra" }
-thiserror = "*"
+thiserror = "1.0.32"
