--- a/crates/sierra_to_casm/Cargo.toml
+++ b/crates/sierra_to_casm/Cargo.toml
@@ -10,5 +10,6 @@ test-case = "2.2.1"
 
 [dependencies]
 casm = { path = "../casm" }
+itertools = "0.10.3"
 sierra = { path = "../sierra" }
 thiserror = "1.0.32"
