--- a/crates/sierra/Cargo.toml
+++ b/crates/sierra/Cargo.toml
@@ -15,6 +15,8 @@ test-case = "2.2.1"
 
 [dependencies]
 array-init = "2.0.1"
+const-fnv1a-hash = "1.1.0"
 itertools = "0.10.3"
 lalrpop-util = { version = "0.19.8", features = ["lexer"] }
 thiserror = "1.0.32"
+smol_str = "0.1.23"
