--- a/crates/sierra_generator/Cargo.toml
+++ b/crates/sierra_generator/Cargo.toml
@@ -8,6 +8,7 @@ defs = {path = "../defs"}
 salsa = "0.16.1"
 semantic = { path = "../semantic" }
 sierra = { path = "../sierra" }
+smol_str = "0.1.23"
 
 [dev_dependencies]
 pretty_assertions = "1.2.1"
