--- a/crates/sierra/Cargo.toml
+++ b/crates/sierra/Cargo.toml
@@ -19,4 +19,5 @@ const-fnv1a-hash = "1.1.0"
 itertools = "0.10.3"
 lalrpop-util = { version = "0.19.8", features = ["lexer"] }
 thiserror = "1.0.32"
+salsa = "0.16.1"
 smol_str = "0.1.23"
