--- a/crates/syntax/Cargo.toml
+++ b/crates/syntax/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+db_utils = { path = "../db_utils" }
 salsa = "0.16.1"
 smol_str = "0.1.23"
+
+[dev-dependencies]
+pretty_assertions = "1.2.1"
