--- a/crates/semantic/Cargo.toml
+++ b/crates/semantic/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 db_utils = { path = "../db_utils" }
 defs = { path = "../defs" }
+diagnostics = { path = "../diagnostics" }
+diagnostics_proc_macros = { path = "../diagnostics_proc_macros" }
 filesystem = { path = "../filesystem" }
 parser = { path = "../parser" }
 salsa = "0.16.1"
