--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -3,15 +3,18 @@ name = "parser"
 version = "0.1.0"
 edition = "2021"
 
-[dev-dependencies]
-test-case = "2.2.1"
-
 [dependencies]
 colored = "2"
 db_utils = { path = "../db_utils" }
+diagnostics = { path = "../diagnostics" }
+diagnostics_proc_macros = { path = "../diagnostics_proc_macros" }
 filesystem = { path = "../filesystem" }
 itertools = "0.10.3"
 salsa = "0.16.1"
 smol_str = "0.1.23"
 syntax = { path = "../syntax" }
 syntax_codegen = { path = "../syntax_codegen" }
+
+[dev-dependencies]
+pretty_assertions = "1.2.1"
+test-case = "2.2.1"
