--- a/crates/semantic/Cargo.toml
+++ b/crates/semantic/Cargo.toml
@@ -13,3 +13,7 @@ parser = { path = "../parser" }
 salsa = "0.16.1"
 smol_str = "0.1.23"
 syntax = { path = "../syntax" }
+
+[dev-dependencies]
+assert_matches = "1.5"
+indoc = "1.0.7"
