Move setup_test_module() to test_utils.rs so that it can be used from other crates as well.

--- a/crates/semantic/Cargo.toml
+++ b/crates/semantic/Cargo.toml
@@ -3,6 +3,9 @@ name = "semantic"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+testing = []
+
 [dependencies]
 db_utils = { path = "../db_utils" }
 defs = { path = "../defs" }
