Use OrderedHashMap in defs::db.

--- a/crates/defs/Cargo.toml
+++ b/crates/defs/Cargo.toml
@@ -13,6 +13,7 @@ salsa = "0.16.1"
 syntax = { path = "../syntax" }
 parser = { path = "../parser" }
 smol_str = "0.1.23"
+utils = { path = "../utils" }
 
 [dev-dependencies]
 indoc = "1.0.7"
