Fix PR comments.

--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
-name = "db_utils"
+name = "utils"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+indexmap = "1.9.1"
+itertools = "0.10.3"
