--- a/crates/sierra_generator/Cargo.toml
+++ b/crates/sierra_generator/Cargo.toml
@@ -13,6 +13,7 @@ salsa = "0.16.1"
 semantic = { path = "../semantic" }
 sierra = { path = "../sierra" }
 smol_str = "0.1.23"
+utils = { path = "../utils" }
 
 [dev_dependencies]
 indoc = "1.0.7"
