--- a/crates/diagnostics/Cargo.toml
+++ b/crates/diagnostics/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+db_utils = { path = "../db_utils" }
 filesystem = { path = "../filesystem" }
 salsa = "0.16.1"
 
