--- a/crates/defs/Cargo.toml
+++ b/crates/defs/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 db_utils = { path = "../db_utils" }
+debug = { path = "../debug" }
 diagnostics = { path = "../diagnostics" }
 diagnostics_proc_macros = { path = "../diagnostics_proc_macros" }
 filesystem = { path = "../filesystem" }
