DebugWithDb for semantic structures (#293)
* DebugWithDb for semantic structures

--- a/crates/semantic/Cargo.toml
+++ b/crates/semantic/Cargo.toml
@@ -9,6 +9,7 @@ testing = []
 [dependencies]
 db_utils = { path = "../db_utils" }
 defs = { path = "../defs" }
+debug = { path = "../debug" }
 diagnostics = { path = "../diagnostics" }
 diagnostics_proc_macros = { path = "../diagnostics_proc_macros" }
 filesystem = { path = "../filesystem" }
