--- a/crates/syntax/Cargo.toml
+++ b/crates/syntax/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 db_utils = { path = "../db_utils" }
+debug = { path = "../debug" }
 filesystem = { path = "../filesystem" }
 salsa = "0.16.1"
 smol_str = "0.1.23"
