--- a/crates/sierra_to_casm/Cargo.toml
+++ b/crates/sierra_to_casm/Cargo.toml
@@ -11,6 +11,7 @@ test-case = "2.2.1"
 
 [dependencies]
 casm = { path = "../casm" }
+utils = { path = "../utils" }
 itertools = "0.10.3"
 sierra = { path = "../sierra" }
 thiserror = "1.0.32"
