--- a/crates/sierra_generator/Cargo.toml
+++ b/crates/sierra_generator/Cargo.toml
@@ -10,6 +10,7 @@ defs = {path = "../defs"}
 diagnostics = { path = "../diagnostics" }
 diagnostics_proc_macros = { path = "../diagnostics_proc_macros" }
 filesystem = { path = "../filesystem" }
+itertools = "0.10.3"
 parser = { path = "../parser" }
 salsa = "0.16.1"
 semantic = { path = "../semantic" }
