--- a/crates/filesystem/Cargo.toml
+++ b/crates/filesystem/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 db_utils = { path = "../db_utils" }
 debug = { path = "../debug" }
+project = { path = "../project" }
 salsa = "0.16.1"
 smol_str = "0.1.23"
