Refactor diagnostics in syntax and semantic (#357)
* Refactor diagnostics in parser

--- a/crates/defs/Cargo.toml
+++ b/crates/defs/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 db_utils = { path = "../db_utils" }
 debug = { path = "../debug" }
 diagnostics = { path = "../diagnostics" }
-diagnostics_proc_macros = { path = "../diagnostics_proc_macros" }
 filesystem = { path = "../filesystem" }
 itertools = "0.10.3"
 salsa = "0.16.1"
@@ -18,3 +17,4 @@ utils = { path = "../utils" }
 
 [dev-dependencies]
 indoc = "1.0.7"
+pretty_assertions = "1.2.1"
