--- a/crates/semantic/Cargo.toml
+++ b/crates/semantic/Cargo.toml
@@ -15,6 +15,8 @@ diagnostics_proc_macros = { path = "../diagnostics_proc_macros" }
 filesystem = { path = "../filesystem" }
 itertools = "0.10.3"
 parser = { path = "../parser" }
+# TODO(spapini): Only in testing feature.
+pretty_assertions = "1.2.1"
 salsa = "0.16.1"
 smol_str = "0.1.23"
 syntax = { path = "../syntax" }
