--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -13,6 +13,7 @@ salsa = "0.16.1"
 smol_str = "0.1.23"
 syntax = { path = "../syntax" }
 syntax_codegen = { path = "../syntax_codegen" }
+utils = { path = "../utils" }
 
 [dev-dependencies]
 pretty_assertions = "1.2.1"
