Added a teest to fix parser tests when syntax changes (#371)

--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -3,6 +3,9 @@ name = "parser"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+fix_parser_tests = []
+
 [dependencies]
 colored = "2"
 db_utils = { path = "../db_utils" }
