--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -3,6 +3,9 @@ name = "utils"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+testing = []
+
 [dependencies]
 indexmap = "1.9.1"
 itertools = "0.10.3"
