--- a/crates/sierra_generator/Cargo.toml
+++ b/crates/sierra_generator/Cargo.toml
@@ -23,3 +23,4 @@ utils = { path = "../utils" }
 indoc = "1.0.7"
 pretty_assertions = "1.2.1"
 semantic = { path = "../semantic", features = ["testing"] }
+utils = { path = "../utils", features = ["testing"] }
