--- a/crates/semantic/Cargo.toml
+++ b/crates/semantic/Cargo.toml
@@ -13,6 +13,7 @@ debug = { path = "../debug" }
 diagnostics = { path = "../diagnostics" }
 diagnostics_proc_macros = { path = "../diagnostics_proc_macros" }
 filesystem = { path = "../filesystem" }
+id-arena = "2.2.1"
 itertools = "0.10.3"
 parser = { path = "../parser" }
 # TODO(spapini): Only in testing feature.
