Diagnostics refactor in SierraGen (#512)

--- a/crates/diagnostics/Cargo.toml
+++ b/crates/diagnostics/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 db_utils = { path = "../db_utils" }
 filesystem = { path = "../filesystem" }
+itertools = "0.10.3"
 salsa = "0.16.1"
 
 
