--- a/crates/sierra_gas/Cargo.toml
+++ b/crates/sierra_gas/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 sierra = { path = "../sierra" }
 itertools = "0.10.3"
+good_lp = { version = "1.3.2", features = ["highs"], default-features = false }
 thiserror = "1.0.32"
 
 [dev-dependencies]
