--- a/crates/formatter/Cargo.toml
+++ b/crates/formatter/Cargo.toml
@@ -3,14 +3,21 @@ name = "formatter"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "formatter_cli"
+path = "src/bin/cli.rs"
+
 [dependencies]
+clap = {version = "4.0.8", features = ["derive"]}
 filesystem = { path = "../filesystem" }
 itertools = "0.10.3"
 salsa = "0.16.1"
 smol_str = "0.1.23"
+parser = { path = "../parser" }
 syntax = { path = "../syntax" }
+diffy = "0.3.0"
+colored = "2"
 
 [dev-dependencies]
 pretty_assertions = "1.2.1"
 test-case = "2.2.1"
-parser = { path = "../parser" }
