--- a/crates/sierra_generator/Cargo.toml
+++ b/crates/sierra_generator/Cargo.toml
@@ -10,6 +10,7 @@ defs = {path = "../defs"}
 diagnostics = { path = "../diagnostics" }
 diagnostics_proc_macros = { path = "../diagnostics_proc_macros" }
 filesystem = { path = "../filesystem" }
+id-arena = "2.2.1"
 itertools = "0.10.3"
 lowering = { path = "../lowering" }
 parser = { path = "../parser" }
