--- a/crates/sierra_gas/Cargo.toml
+++ b/crates/sierra_gas/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 sierra = { path = "../sierra" }
+utils = { path = "../utils" }
 itertools = "0.10.3"
 good_lp = { version = "1.3.2", features = ["minilp"], default-features = false }
 thiserror = "1.0.32"
