--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -11,6 +11,7 @@ parser = { path = "../crates/parser" }
 pretty_assertions = "1.2.1"
 semantic = { path = "../crates/semantic", features = ["testing"] }
 sierra = { path = "../crates/sierra" }
+sierra_gas = { path = "../crates/sierra_gas" }
 sierra_generator = { path = "../crates/sierra_generator" }
 sierra_to_casm = { path = "../crates/sierra_to_casm" }
 syntax = { path = "../crates/syntax" }
