--- a/crates/sierra_to_casm/Cargo.toml
+++ b/crates/sierra_to_casm/Cargo.toml
@@ -15,3 +15,4 @@ itertools = "0.10.3"
 sierra = { path = "../sierra" }
 sierra_gas = { path = "../sierra_gas" }
 thiserror = "1.0.32"
+utils = { path = "../utils" }
