--- a/crates/lowering/Cargo.toml
+++ b/crates/lowering/Cargo.toml
@@ -12,6 +12,8 @@ diagnostics_proc_macros = { path = "../diagnostics_proc_macros" }
 filesystem = { path = "../filesystem" }
 id-arena = "2.2.1"
 itertools = "0.10.3"
+num-bigint = "0.4.3"
+num-traits = "0.2"
 parser = { path = "../parser" }
 salsa = "0.16.1"
 semantic = { path = "../semantic" }
