--- a/crates/semantic/Cargo.toml
+++ b/crates/semantic/Cargo.toml
@@ -18,6 +18,7 @@ itertools = "0.10.3"
 parser = { path = "../parser" }
 # TODO(spapini): Only in testing feature.
 pretty_assertions = "1.2.1"
+num-bigint = "0.4.3"
 salsa = "0.16.1"
 smol_str = "0.1.23"
 syntax = { path = "../syntax" }
