--- a/crates/sierra/Cargo.toml
+++ b/crates/sierra/Cargo.toml
@@ -13,6 +13,8 @@ const-fnv1a-hash = "1.1.0"
 itertools = "0.10.3"
 lalrpop-util = { version = "0.19.8", features = ["lexer"] }
 thiserror = "1.0.32"
+num-bigint = "0.4.3"
+num-traits = "0.2"
 salsa = "0.16.1"
 smol_str = "0.1.23"
 utils = { path = "../utils" }
