--- a/crates/casm/Cargo.toml
+++ b/crates/casm/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 thiserror = "1.0.32"
 num-bigint = { version = "0.4" }
+utils = { path = "../utils" }
 
 [dev-dependencies]
 indoc = "1.0.7"
