--- a/crates/semantic/Cargo.toml
+++ b/crates/semantic/Cargo.toml
@@ -19,6 +19,7 @@ parser = { path = "../parser" }
 # TODO(spapini): Only in testing feature.
 pretty_assertions = "1.2.1"
 num-bigint = "0.4.3"
+num-traits = "0.2"
 salsa = "0.16.1"
 smol_str = "0.1.23"
 syntax = { path = "../syntax" }
