--- a/crates/sierra_to_casm/Cargo.toml
+++ b/crates/sierra_to_casm/Cargo.toml
@@ -11,9 +11,15 @@ test-case = "2.2.1"
 
 [dependencies]
 casm = { path = "../casm" }
+clap = {version = "4.0", features = ["derive"]}
 itertools = "0.10.3"
 num-bigint = "0.4.3"
 sierra = { path = "../sierra" }
 sierra_gas = { path = "../sierra_gas" }
 thiserror = "1.0.32"
 utils = { path = "../utils" }
+
+
+[[bin]]
+name = "sierra_compiler"
+path = "src/cli.rs"
