--- a/crates/diagnostics_proc_macros/Cargo.toml
+++ b/crates/diagnostics_proc_macros/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "diagnostics_proc_macros"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [lib]
 proc-macro = true
@@ -10,6 +10,6 @@ proc-macro = true
 normal = ["debug"]
 
 [dependencies]
-syn = { version = "1.0.99", features = ["full", "extra-traits"] }
-quote = "1.0.21"
+syn.workspace = true
+quote.workspace = true
 debug = { path = "../debug" }
