--- a/crates/syntax/Cargo.toml
+++ b/crates/syntax/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "syntax"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 db_utils = { path = "../db_utils" }
 debug = { path = "../debug" }
 filesystem = { path = "../filesystem" }
-salsa = "0.16.1"
-smol_str = "0.1.23"
+salsa.workspace = true
+smol_str.workspace = true
 utils = { path = "../utils" }
 
 [dev-dependencies]
-pretty_assertions = "1.2.1"
+pretty_assertions.workspace = true
