--- a/crates/db_utils/Cargo.toml
+++ b/crates/db_utils/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "db_utils"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
