--- a/crates/casm/Cargo.toml
+++ b/crates/casm/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "casm"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
-thiserror = "1.0.32"
-num-bigint = { version = "0.4" }
+thiserror.workspace = true
+num-bigint.workspace = true
 utils = { path = "../utils" }
 
 [dev-dependencies]
-indoc = "1.0.7"
-itertools = "0.10.3"
-pretty_assertions = "1.2.1"
-test-case = "2.2.1"
+indoc.workspace = true
+itertools.workspace = true
+pretty_assertions.workspace = true
+test-case.workspace = true
