--- a/crates/debug/Cargo.toml
+++ b/crates/debug/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "debug"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dev_dependencies]
 db_utils = { path = "../db_utils" }
 diagnostics_proc_macros = { path = "../diagnostics_proc_macros" }
-salsa = "0.16.1"
+salsa.workspace = true
