--- a/crates/defs/Cargo.toml
+++ b/crates/defs/Cargo.toml
@@ -1,20 +1,20 @@
 [package]
 name = "defs"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 db_utils = { path = "../db_utils" }
 debug = { path = "../debug" }
 diagnostics = { path = "../diagnostics" }
 filesystem = { path = "../filesystem" }
-itertools = "0.10.3"
-salsa = "0.16.1"
+itertools.workspace = true
+salsa.workspace = true
 syntax = { path = "../syntax" }
 parser = { path = "../parser" }
-smol_str = "0.1.23"
+smol_str.workspace = true
 utils = { path = "../utils" }
 
 [dev-dependencies]
-indoc = "1.0.7"
-pretty_assertions = "1.2.1"
+indoc.workspace = true
+pretty_assertions.workspace = true
