--- a/crates/lowering/Cargo.toml
+++ b/crates/lowering/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "lowering"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 db_utils = { path = "../db_utils" }
@@ -10,19 +10,19 @@ defs = {path = "../defs"}
 diagnostics = { path = "../diagnostics" }
 diagnostics_proc_macros = { path = "../diagnostics_proc_macros" }
 filesystem = { path = "../filesystem" }
-id-arena = "2.2.1"
-itertools = "0.10.3"
-num-bigint = "0.4.3"
-num-traits = "0.2"
+id-arena.workspace = true
+itertools.workspace = true
+num-bigint.workspace = true
+num-traits.workspace = true
 parser = { path = "../parser" }
-salsa = "0.16.1"
+salsa.workspace = true
 semantic = { path = "../semantic" }
-smol_str = "0.1.23"
+smol_str.workspace = true
 syntax = { path = "../syntax" }
 utils = { path = "../utils" }
 
 [dev_dependencies]
-indoc = "1.0.7"
-pretty_assertions = "1.2.1"
+indoc.workspace = true
+pretty_assertions.workspace = true
 semantic = { path = "../semantic", features = ["testing"] }
 utils = { path = "../utils", features = ["testing"] }
