--- a/crates/semantic/Cargo.toml
+++ b/crates/semantic/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "semantic"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [features]
 testing = []
@@ -13,20 +13,20 @@ debug = { path = "../debug" }
 diagnostics = { path = "../diagnostics" }
 diagnostics_proc_macros = { path = "../diagnostics_proc_macros" }
 filesystem = { path = "../filesystem" }
-id-arena = "2.2.1"
-itertools = "0.10.3"
+id-arena.workspace = true
+itertools.workspace = true
 parser = { path = "../parser" }
 # TODO(spapini): Only in testing feature.
-pretty_assertions = "1.2.1"
-num-bigint = "0.4.3"
-num-traits = "0.2"
-salsa = "0.16.1"
-smol_str = "0.1.23"
+pretty_assertions.workspace = true
+num-bigint.workspace = true
+num-traits.workspace = true
+salsa.workspace = true
+smol_str.workspace = true
 syntax = { path = "../syntax" }
 utils = { path = "../utils" }
 
 [dev-dependencies]
-assert_matches = "1.5"
-indoc = "1.0.7"
-pretty_assertions = "1.2.1"
+assert_matches.workspace = true
+indoc.workspace = true
+pretty_assertions.workspace = true
 utils = { path = "../utils", features = ["testing"] }
