--- a/crates/sierra/Cargo.toml
+++ b/crates/sierra/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "sierra"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 build = "src/build.rs" # LALRPOP preprocessing
 
 [build-dependencies]
@@ -9,18 +9,18 @@ lalrpop = "0.19.8"
 regex = "1"
 
 [dependencies]
-const-fnv1a-hash = "1.1.0"
-itertools = "0.10.3"
-lalrpop-util = { version = "0.19.8", features = ["lexer"] }
-thiserror = "1.0.32"
-num-bigint = "0.4.3"
-num-traits = "0.2"
-salsa = "0.16.1"
-smol_str = "0.1.23"
+const-fnv1a-hash.workspace = true
+itertools.workspace = true
+lalrpop-util.workspace = true
+thiserror.workspace = true
+num-bigint.workspace = true
+num-traits.workspace = true
+salsa.workspace = true
+smol_str.workspace = true
 utils = { path = "../utils" }
 
 [dev-dependencies]
-assert_matches = "1.5"
-bimap = "0.6.2"
-indoc = "1.0.7"
-test-case = "2.2.1"
+assert_matches.workspace = true
+bimap.workspace = true
+indoc.workspace = true
+test-case.workspace = true
