--- a/crates/sierra_gas/Cargo.toml
+++ b/crates/sierra_gas/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "sierra_gas"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 sierra = { path = "../sierra" }
 utils = { path = "../utils" }
-itertools = "0.10.3"
-good_lp = { version = "1.3.2", features = ["minilp"], default-features = false }
-thiserror = "1.0.32"
+itertools.workspace = true
+good_lp.workspace = true
+thiserror.workspace = true
 
 [dev-dependencies]
-indoc = "1.0.7"
-test-case = "2.2.1"
+indoc.workspace = true
+test-case.workspace = true
