--- a/crates/syntax_codegen/Cargo.toml
+++ b/crates/syntax_codegen/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "syntax_codegen"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [package.metadata.cargo-udeps.ignore]
 normal = ["syntax"]
@@ -11,5 +11,5 @@ name = "generate_syntax"
 path = "src/bin/generate_syntax.rs"
 
 [dependencies]
-genco = "0.17.0"
-xshell = "0.2.2"
+genco.workspace = true
+xshell.workspace = true
