Added Strongly Connected Component algorithm (#882)

--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -9,3 +9,6 @@ testing = []
 [dependencies]
 indexmap.workspace = true
 itertools.workspace = true
+
+[dev-dependencies]
+test-case.workspace = true
