Move sierra_generator.test_utils under feature = "testing". (#931)

--- a/crates/sierra_generator/Cargo.toml
+++ b/crates/sierra_generator/Cargo.toml
@@ -3,6 +3,9 @@ name = "sierra_generator"
 version.workspace = true
 edition.workspace = true
 
+[features]
+testing = []
+
 [dependencies]
 db_utils = { path = "../db_utils" }
 debug = { path = "../debug" }
