--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -13,7 +13,7 @@ pretty_assertions = "1.2.1"
 semantic = { path = "../crates/semantic", features = ["testing"] }
 sierra = { path = "../crates/sierra" }
 sierra_gas = { path = "../crates/sierra_gas" }
-sierra_generator = { path = "../crates/sierra_generator" }
+sierra_generator = { path = "../crates/sierra_generator", features = ["testing"] }
 sierra_to_casm = { path = "../crates/sierra_to_casm" }
 syntax = { path = "../crates/syntax" }
 salsa = "0.16.1"
