--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -4,13 +4,12 @@ version.workspace = true
 edition.workspace = true
 
 [dev-dependencies]
+compiler = { path = "../crates/compiler" }
 defs = { path = "../crates/defs" }
 diagnostics = { path = "../crates/diagnostics" }
 filesystem = { path = "../crates/filesystem" }
-lowering = { path = "../crates/lowering" }
 parser = { path = "../crates/parser" }
 pretty_assertions = "1.2.1"
-semantic = { path = "../crates/semantic", features = ["testing"] }
 sierra = { path = "../crates/sierra" }
 sierra_gas = { path = "../crates/sierra_gas" }
 sierra_generator = { path = "../crates/sierra_generator", features = ["testing"] }
