--- a/crates/starknet/Cargo.toml
+++ b/crates/starknet/Cargo.toml
@@ -6,10 +6,13 @@ edition.workspace = true
 [dependencies]
 defs = { path = "../defs" }
 semantic = { path = "../semantic" }
+serde.workspace = true
+serde_json.workspace = true
 syntax = { path = "../syntax" }
 thiserror.workspace = true
 
 [dev-dependencies]
 indoc.workspace = true
-utils = { path = "../utils" }
+pretty_assertions.workspace = true
 semantic = { path = "../semantic", features = ["testing"] }
+utils = { path = "../utils" }
