Added logging capabilities and sample logs in lowering. (#1009)

--- a/crates/compiler/Cargo.toml
+++ b/crates/compiler/Cargo.toml
@@ -18,6 +18,10 @@ project = { path = "../project" }
 salsa.workspace = true
 thiserror.workspace = true
 
+
+[dev-dependencies]
+test-log.workspace = true
+
 [[bin]]
 name = "cairo-compile"
 path = "src/cli.rs"
