--- a/crates/db_utils/Cargo.toml
+++ b/crates/db_utils/Cargo.toml
@@ -3,4 +3,5 @@ name = "db_utils"
 version.workspace = true
 edition.workspace = true
 
-[dependencies]
+[dev-dependencies]
+test-log.workspace = true
