--- a/crates/debug/Cargo.toml
+++ b/crates/debug/Cargo.toml
@@ -3,7 +3,9 @@ name = "debug"
 version.workspace = true
 edition.workspace = true
 
-[dev_dependencies]
+[dev-dependencies]
 db_utils = { path = "../db_utils" }
 diagnostics_proc_macros = { path = "../diagnostics_proc_macros" }
+env_logger.workspace = true
 salsa.workspace = true
+test-log.workspace = true
