--- a/crates/casm/Cargo.toml
+++ b/crates/casm/Cargo.toml
@@ -11,6 +11,8 @@ utils = { path = "../utils" }
 indoc.workspace = true
 
 [dev-dependencies]
+env_logger.workspace = true
 itertools.workspace = true
 pretty_assertions.workspace = true
 test-case.workspace = true
+test-log.workspace = true
