--- a/crates/languageserver/Cargo.toml
+++ b/crates/languageserver/Cargo.toml
@@ -24,3 +24,7 @@ lsp.workspace = true
 serde_json.workspace = true
 salsa.workspace = true
 utils = { path = "../utils" }
+
+[dev-dependencies]
+test-log.workspace = true
+
