--- a/crates/lowering/Cargo.toml
+++ b/crates/lowering/Cargo.toml
@@ -12,6 +12,7 @@ diagnostics_proc_macros = { path = "../diagnostics_proc_macros" }
 filesystem = { path = "../filesystem" }
 id-arena.workspace = true
 itertools.workspace = true
+log.workspace = true
 num-bigint.workspace = true
 num-traits.workspace = true
 parser = { path = "../parser" }
@@ -21,8 +22,9 @@ smol_str.workspace = true
 syntax = { path = "../syntax" }
 utils = { path = "../utils" }
 
-[dev_dependencies]
+[dev-dependencies]
 indoc.workspace = true
 pretty_assertions.workspace = true
 semantic = { path = "../semantic", features = ["testing"] }
+test-log.workspace = true
 utils = { path = "../utils", features = ["testing"] }
