--- a/crates/sierra_generator/Cargo.toml
+++ b/crates/sierra_generator/Cargo.toml
@@ -25,8 +25,10 @@ smol_str.workspace = true
 syntax = { path = "../syntax" }
 utils = { path = "../utils" }
 
-[dev_dependencies]
+[dev-dependencies]
+env_logger.workspace = true
 indoc.workspace = true
 pretty_assertions.workspace = true
 semantic = { path = "../semantic", features = ["testing"] }
 utils = { path = "../utils", features = ["testing"] }
+test-log.workspace = true
