--- a/crates/sierra_to_casm/Cargo.toml
+++ b/crates/sierra_to_casm/Cargo.toml
@@ -15,9 +15,11 @@ thiserror.workspace = true
 utils = { path = "../utils" }
 
 [dev-dependencies]
+env_logger.workspace = true
 indoc.workspace = true
 pretty_assertions.workspace = true
 test-case.workspace = true
+test-log.workspace = true
 
 [[bin]]
 name = "sierra-compile"
