--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -11,4 +11,6 @@ indexmap.workspace = true
 itertools.workspace = true
 
 [dev-dependencies]
+env_logger.workspace = true
 test-case.workspace = true
+test-log.workspace = true
