--- a/crates/sierra_to_casm/Cargo.toml
+++ b/crates/sierra_to_casm/Cargo.toml
@@ -8,6 +8,7 @@ assert_matches.workspace = true
 casm = { path = "../casm" }
 clap.workspace = true
 itertools.workspace = true
+log.workspace = true
 num-bigint.workspace = true
 sierra = { path = "../sierra" }
 sierra_gas = { path = "../sierra_gas" }
