--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -7,10 +7,12 @@ edition.workspace = true
 testing = []
 
 [dependencies]
+chrono.workspace = true
+env_logger.workspace = true
 indexmap.workspace = true
 itertools.workspace = true
+log.workspace = true
 
 [dev-dependencies]
-env_logger.workspace = true
 test-case.workspace = true
 test-log.workspace = true
