--- a/crates/starknet/Cargo.toml
+++ b/crates/starknet/Cargo.toml
@@ -11,6 +11,7 @@ serde_json.workspace = true
 syntax = { path = "../syntax" }
 thiserror.workspace = true
 num-bigint.workspace = true
+num-traits.workspace = true
 
 [dev-dependencies]
 indoc.workspace = true
