--- a/crates/compiler/Cargo.toml
+++ b/crates/compiler/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+anyhow.workspace = true
 clap.workspace = true
 defs = { path = "../defs" }
 db_utils = { path = "../db_utils" }
