Enabled using `super` as part of path as a special case. (#1026)

--- a/crates/semantic/Cargo.toml
+++ b/crates/semantic/Cargo.toml
@@ -32,3 +32,4 @@ indoc.workspace = true
 pretty_assertions.workspace = true
 test-log.workspace = true
 utils = { path = "../utils", features = ["testing"] }
+test-case.workspace = true
