--- a/crates/sierra/Cargo.toml
+++ b/crates/sierra/Cargo.toml
@@ -16,6 +16,7 @@ thiserror.workspace = true
 num-bigint.workspace = true
 num-traits.workspace = true
 salsa.workspace = true
+serde.workspace = true
 smol_str.workspace = true
 utils = { path = "../utils" }
 
