--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -18,7 +18,7 @@ sierra = { path = "../crates/sierra" }
 sierra_gas = { path = "../crates/sierra_gas" }
 semantic = { path = "../crates/semantic", features = ["testing"] }
 sierra_generator = { path = "../crates/sierra_generator", features = ["testing"] }
-sierra_to_casm = { path = "../crates/sierra_to_casm" }
+sierra_to_casm = { path = "../crates/sierra_to_casm", features = ["testing"] }
 syntax = { path = "../crates/syntax" }
 salsa.workspace = true
 test-case.workspace = true
