Added logs to tests from test files. (#1079)

--- a/crates/lowering/Cargo.toml
+++ b/crates/lowering/Cargo.toml
@@ -23,6 +23,7 @@ syntax = { path = "../syntax" }
 utils = { path = "../utils" }
 
 [dev-dependencies]
+env_logger.workspace = true
 indoc.workspace = true
 pretty_assertions.workspace = true
 semantic = { path = "../semantic", features = ["testing"] }
