--- a/crates/semantic/Cargo.toml
+++ b/crates/semantic/Cargo.toml
@@ -29,6 +29,7 @@ utils = { path = "../utils" }
 assert_matches.workspace = true
 env_logger.workspace = true
 indoc.workspace = true
+log.workspace = true
 pretty_assertions.workspace = true
 test-log.workspace = true
 utils = { path = "../utils", features = ["testing"] }
