Fixed plugins to be able to affect the same virtual module. (#1076)

--- a/crates/defs/Cargo.toml
+++ b/crates/defs/Cargo.toml
@@ -8,6 +8,7 @@ db_utils = { path = "../db_utils" }
 debug = { path = "../debug" }
 diagnostics = { path = "../diagnostics" }
 filesystem = { path = "../filesystem" }
+indexmap.workspace = true
 itertools.workspace = true
 salsa.workspace = true
 syntax = { path = "../syntax" }
